# nb

./: .envrc  README.md  pyproject.toml
src/nb/cli/: cli.py
