[tool.poetry]
name = "nb"
version = "0.1.0"
description = ""
authors = ["Daisuke Arai <daisuke.qu@gmail.com>"]
readme = "README.md"
packages = [{include = "nb", from = "src"}]

[tool.poetry.scripts]
nb = 'nb.cli:main'

[tool.poetry.dependencies]
python = "^3.8.0"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
jupyterlab = "^3.6.3"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
